test/testdata/functions/invalid_property_access_error.lox
fun f() {}
// error: property access is not valid for 'function' object
// lint warning: property 'y' has not been declared or assigned anywhere
f.y;
